# Minet

./: .gitignore  Assimp.drawio  CMakeLists.txt  README.md  config.hpp  config.in  main.cpp  opengl.drawio  render.drawio  test.cpp
assets/shader/: README  blend.frag  blinn_phong.frag  color.frag  convolution_env.frag  depth_visual.frag  diffuse.frag  diffuse.vert  framebuffer.frag  framebuffer.vert  hdr2cube.frag  ibl_ambient.frag  light.frag  light.vert  normal.frag  normal.vert  pbr_direct_light.frag  phong.frag  planet.frag  planet.vert  reflect.frag  reflect.vert  rock.frag  single_color.frag  sky.frag  sky.vert  tex.frag  tex.vert
debugger/: debugger_config.h  debugger_config.in  diffuse.frag  diffuse.vert  main.cpp  ray_helper.h  rays.frag  rays.vert
engine/: camera.h  color.h  color_const.h  core.h  delegate.h  frame_buffer.h  framebuffer.h  global.h  light.h  mesh.h  mesh_builder.h  model.h  model_builder.h  render.h  scene.h  shader.h  shader_ext_light.h  shader_ext_mvp.h  shader_standard.h  texture.h  texture_builder.h  window.h
engine/src/: camera.cpp  color.cpp  core.cpp  frame_buffer.cpp  framebuffer.cpp  light.cpp  mesh.cpp  mesh_builder.cpp  model.cpp  model_builder.cpp  render.cpp  scene.cpp  shader.cpp  shader_standard.cpp  texture.cpp  texture_builder.cpp  window.cpp
engine/test/: test_delegate.cpp
engine/utils/: common.h  file.h  with.h
engine/utils/src/: file.cpp
examples/border/: diffuse.vert  main.cpp
examples/box-floor/: blinn_phong.frag  light.frag  main.cpp
examples/face-cull/: main.cpp
examples/instanced-space/: main.cpp  rock.frag  rock.vert
examples/light/: main.cpp  phong.vert
examples/nano-suit/: main.cpp  tex.frag  tex.vert
examples/normal-visualize/: main.cpp  normal.frag  normal.geom  normal.vert  reflect.frag  reflect.vert  sky.frag  sky.vert
examples/pbr-direct-light/: main.cpp  pbr_direct_light.frag  pbr_direct_light.vert
examples/pbr-image-based-light/: hdr2cube.vert  ibl_ambient.frag  light.vert  main.cpp
examples/post-process/: framebuffer.frag  framebuffer.vert  main.cpp
examples/simple/: main.cpp
examples/sky-box/: main.cpp
examples/transparent/: main.cpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: imgui_demo.cpp  imgui_tables.cpp
lib/imgui/examples/example_glfw_opengl3/: build_win32.bat
scene/: cube.h  happy_box.h  light_box.h  myscene.h  scene.h  scene2.h  scene_box_floor.cpp  scene_box_floor.h  scene_edge_outline.cpp  scene_face_cull.cpp  scene_light.cpp  scene_light.h  scene_nano.cpp  scene_nano.h  scene_normal_visualize.cpp  scene_pbr_direct_light.h  scene_pbr_dl.cpp  scene_pbr_dl.h  scene_pbr_ibl.cpp  scene_pbr_ibl.h  scene_post_process.cpp  scene_simple.cpp  scene_simple.h  scene_skybox.cpp  scene_skybox.h  scene_space.cpp  scene_space.h  scene_transparent.cpp  texture_box.h
